[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
serde = { version = "1", features = ["derive"] }
actix-web = "4"
deadpool-redis = { version = "0.11.1" , features = ["rt_tokio_1"] }
rand = "0.8.5"
serde_json = "1.0.94"
